--- a/archives.html
+++ b/archives.html
@@ -35,6 +35,8 @@
 <h1>Archives for MathLing@SBU</h1>
 
 <dl>
+    <dt>Tue 14 February 2017</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/reminder-first-meeting-this-friday.html">Reminder: first meeting this&nbsp;Friday</a></dd>
     <dt>Mon 06 February 2017</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/the-next-meeting.html">The Next&nbsp;Meeting</a></dd>
     <dt>Tue 24 January 2017</dt>
