--- a/archives.html
+++ b/archives.html
@@ -35,6 +35,8 @@
 <h1>Archives for MathLing@SBU</h1>
 
 <dl>
+    <dt>Thu 02 March 2017</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/tomorrow-meeting-on-ccg-parsing.html">Tomorrow meeting on <span class="caps">CCG</span>&nbsp;Parsing</a></dd>
     <dt>Fri 24 February 2017</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/next-meeting-semantics-in-ccgs.html">Next Meeting: Semantics in&nbsp;CCGs</a></dd>
     <dt>Tue 14 February 2017</dt>
