--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ The group is very interdisciplinary in nature and we welcome guests from other&n
 Recent News
 </h2>
 <dl>
+    <dt><b>Thu 02 March 2017</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/tomorrow-meeting-on-ccg-parsing.html">Tomorrow meeting on <span class="caps">CCG</span>&nbsp;Parsing</a></dd>
     <dt><b>Fri 24 February 2017</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/next-meeting-semantics-in-ccgs.html">Next Meeting: Semantics in&nbsp;CCGs</a></dd>
     <dt><b>Tue 14 February 2017</b></dt>
@@ -66,8 +68,6 @@ Recent News
     <dd><a href="http://complab-stonybrook.github.io/mlrg/the-next-meeting.html">The Next&nbsp;Meeting</a></dd>
     <dt><b>Tue 24 January 2017</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/spring-2017-the-first-meeting.html">Spring 2017: the first&nbsp;meeting!</a></dd>
-    <dt><b>Thu 08 December 2016</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/fall-2016-final-meeting.html">Fall 2016 Final&nbsp;Meeting</a></dd>
 </dl>
 		  </div>	
 		  
