--- a/archives.html
+++ b/archives.html
@@ -35,6 +35,8 @@
 <h1>Archives for MathLing@SBU</h1>
 
 <dl>
+    <dt>Thu 13 April 2017</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/adam-on-higher-order-cellular-automata.html">Adam on  Higher-Order Cellular&nbsp;Automata</a></dd>
     <dt>Wed 05 April 2017</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/this-friday-hwichan-on-gapping-ling-colloquium.html">This Friday: Hwichan on Gapping + Ling.&nbsp;Colloquium</a></dd>
     <dt>Thu 30 March 2017</dt>
