--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ The group is very interdisciplinary in nature and we welcome guests from other&n
 Recent News
 </h2>
 <dl>
+    <dt><b>Thu 20 April 2017</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/no-meeting-tomorrow.html">No meeting&nbsp;tomorrow!</a></dd>
     <dt><b>Thu 13 April 2017</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/adam-on-higher-order-cellular-automata.html">Adam on  Higher-Order Cellular&nbsp;Automata</a></dd>
     <dt><b>Wed 05 April 2017</b></dt>
@@ -66,8 +68,6 @@ Recent News
     <dd><a href="http://complab-stonybrook.github.io/mlrg/this-friday-thomas-on-graph-transductions.html">This Friday: Thomas on Graph&nbsp;Transductions!</a></dd>
     <dt><b>Wed 22 March 2017</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/no-meeting-this-week.html">No meeting this&nbsp;week!</a></dd>
-    <dt><b>Wed 15 March 2017</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/spring-break.html">Spring&nbsp;Break</a></dd>
 </dl>
 		  </div>	
 		  
