--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ The group is very interdisciplinary in nature and we welcome guests from other&n
 Recent News
 </h2>
 <dl>
+    <dt><b>Fri 27 October 2017</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/mai-ha-vu-udelaware-on-model-theoretic-syntax.html">Mai Ha Vu (UDelaware) on &#8220;Model-Theoretic&nbsp;Syntax&#8221;</a></dd>
     <dt><b>Fri 20 October 2017</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/enes-avcu-udelaware-on-evolution-of-neural-networks.html">Enes Avcu (UDelaware) on &#8220;Evolution of Neural&nbsp;networks&#8221;</a></dd>
     <dt><b>Fri 13 October 2017</b></dt>
@@ -66,8 +68,6 @@ Recent News
     <dd><a href="http://complab-stonybrook.github.io/mlrg/jon-on-geometric-representations-of-minimalist-grammars.html">Jon on Geometric representations of Minimalist&nbsp;Grammars</a></dd>
     <dt><b>Mon 25 September 2017</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/tensor-product-representations-and-harmonic-grammar.html">Tensor Product Representations and Harmonic&nbsp;Grammar</a></dd>
-    <dt><b>Mon 18 September 2017</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/perceptrons.html">Perceptrons</a></dd>
 </dl>
 		  </div>	
 		  
