--- a/archives.html
+++ b/archives.html
@@ -35,6 +35,8 @@
 <h1>Archives for MathLing@SBU</h1>
 
 <dl>
+    <dt>Fri 03 November 2017</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/alena-on-formal-restrictions-on-multiple-tiers.html">Alena on &#8220;Formal Restrictions on Multiple&nbsp;Tiers&#8221;</a></dd>
     <dt>Fri 27 October 2017</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/mai-ha-vu-udelaware-on-model-theoretic-syntax.html">Mai Ha Vu (UDelaware) on &#8220;Model-Theoretic&nbsp;Syntax&#8221;</a></dd>
     <dt>Fri 20 October 2017</dt>
