--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ The group is very interdisciplinary in nature and we welcome guests from other&n
 Recent News
 </h2>
 <dl>
+    <dt><b>Fri 03 November 2017</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/alena-on-formal-restrictions-on-multiple-tiers.html">Alena on &#8220;Formal Restrictions on Multiple&nbsp;Tiers&#8221;</a></dd>
     <dt><b>Fri 27 October 2017</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/mai-ha-vu-udelaware-on-model-theoretic-syntax.html">Mai Ha Vu (UDelaware) on &#8220;Model-Theoretic&nbsp;Syntax&#8221;</a></dd>
     <dt><b>Fri 20 October 2017</b></dt>
@@ -66,8 +68,6 @@ Recent News
     <dd><a href="http://complab-stonybrook.github.io/mlrg/jeff-on-backpropagation-and-stochastic-gradient-descent.html">Jeff on Backpropagation and Stochastic Gradient&nbsp;Descent</a></dd>
     <dt><b>Fri 06 October 2017</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/jon-on-geometric-representations-of-minimalist-grammars.html">Jon on Geometric representations of Minimalist&nbsp;Grammars</a></dd>
-    <dt><b>Mon 25 September 2017</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/tensor-product-representations-and-harmonic-grammar.html">Tensor Product Representations and Harmonic&nbsp;Grammar</a></dd>
 </dl>
 		  </div>	
 		  
