--- a/archives.html
+++ b/archives.html
@@ -37,6 +37,8 @@
 <dl>
     <dt>Fri 23 March 2018</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/discussion-on-advances-in-tier-based-strict-locality.html">Discussion on Advances in Tier-Based Strict&nbsp;Locality</a></dd>
+    <dt>Fri 23 March 2018</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/remi-eyraud-on-syntactic-congruency-inference.html">Remi Eyraud on Syntactic Congruency&nbsp;Inference</a></dd>
     <dt>Fri 09 March 2018</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/thomas-continues-on-tree-transducers.html">Thomas Continues on Tree&nbsp;Transducers</a></dd>
     <dt>Fri 02 March 2018</dt>
