--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@ Recent News
 <dl>
     <dt><b>Fri 23 March 2018</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/discussion-on-advances-in-tier-based-strict-locality.html">Discussion on Advances in Tier-Based Strict&nbsp;Locality</a></dd>
+    <dt><b>Fri 23 March 2018</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/remi-eyraud-on-syntactic-congruency-inference.html">Remi Eyraud on Syntactic Congruency&nbsp;Inference</a></dd>
     <dt><b>Fri 09 March 2018</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/thomas-continues-on-tree-transducers.html">Thomas Continues on Tree&nbsp;Transducers</a></dd>
     <dt><b>Fri 02 March 2018</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/thomas-on-tree-transducers.html">Thomas on Tree&nbsp;Transducers</a></dd>
     <dt><b>Fri 23 February 2018</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/adam-on-category-theory.html">Adam on Category&nbsp;Theory</a></dd>
-    <dt><b>Tue 13 February 2018</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/rob-on-category-theory.html">Rob on Category&nbsp;Theory</a></dd>
 </dl>
 		  </div>	
 		  
