--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@ The group is very interdisciplinary in nature and we welcome guests from other d
 Recent News
 </h2>
 <dl>
-    <dt><b>Tue 21 August 2018</b></dt>
+    <dt><b>Wed 29 August 2018</b></dt>
+    <dd><a href="https://complab-stonybrook.github.io/mlrg/news/2018-fall/first-meeting-friday-noon.html">First Meeting Friday Noon</a></dd>
+    <dt><b>Wed 29 August 2018</b></dt>
     <dd><a href="https://complab-stonybrook.github.io/mlrg/news/2018-fall/meeting-time-poll-for-fall-2018.html">Meeting Time Poll for Fall 2018</a></dd>
     <dt><b>Fri 23 March 2018</b></dt>
     <dd><a href="https://complab-stonybrook.github.io/mlrg/news/2018-spring/discussion-on-advances-in-tier-based-strict-locality.html">Discussion on Advances in Tier-Based Strict Locality</a></dd>
@@ -65,8 +67,6 @@ Recent News
     <dd><a href="https://complab-stonybrook.github.io/mlrg/news/2018-spring/thomas-continues-on-tree-transducers.html">Thomas Continues on Tree Transducers</a></dd>
     <dt><b>Fri 02 March 2018</b></dt>
     <dd><a href="https://complab-stonybrook.github.io/mlrg/news/2018-spring/thomas-on-tree-transducers.html">Thomas on Tree Transducers</a></dd>
-    <dt><b>Fri 23 February 2018</b></dt>
-    <dd><a href="https://complab-stonybrook.github.io/mlrg/news/2018-spring/adam-on-category-theory.html">Adam on Category Theory</a></dd>
 </dl>
 		  </div>	
 		  
