--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 The group is very interdisciplinary in nature and we welcome guests from other departments.</p>
 <p>You can follow us by <a href="http://complab-stonybrook.github.io/mlrg/feeds/all.atom.xml">subscribing to our news feed</a>.</p>
 <h2>Current Semester</h2>
-<p><strong>Time</strong>: <a href="https://www.when2meet.com/?7018028-BSZj7">check the poll</a><br>
+<p><strong>Time</strong>: Friday, 12-1pm<br>
 <strong>Location</strong>: CompLab (SBS N-250)<br>
 <strong>Topics</strong>: see <a href="https://complab-stonybrook.github.io/mlrg/schedule.html">Schedule</a><br>
 <strong>Readings</strong>: <a href="https://drive.google.com/a/stonybrook.edu/folderview?id=0B09645QdWLiYVVRjSElwcVkwaTg&amp;usp=sharing">Google drive</a> (access restricted)<br>
@@ -57,6 +57,8 @@ The group is very interdisciplinary in nature and we welcome guests from other d
 Recent News
 </h2>
 <dl>
+    <dt><b>Sat 01 September 2018</b></dt>
+    <dd><a href="https://complab-stonybrook.github.io/mlrg/news/2018-fall/nlp-reading-group.html">NLP Reading Group</a></dd>
     <dt><b>Wed 29 August 2018</b></dt>
     <dd><a href="https://complab-stonybrook.github.io/mlrg/news/2018-fall/first-meeting-friday-noon.html">First Meeting Friday Noon</a></dd>
     <dt><b>Tue 21 August 2018</b></dt>
@@ -65,8 +67,6 @@ Recent News
     <dd><a href="https://complab-stonybrook.github.io/mlrg/news/2018-spring/discussion-on-advances-in-tier-based-strict-locality.html">Discussion on Advances in Tier-Based Strict Locality</a></dd>
     <dt><b>Fri 09 March 2018</b></dt>
     <dd><a href="https://complab-stonybrook.github.io/mlrg/news/2018-spring/thomas-continues-on-tree-transducers.html">Thomas Continues on Tree Transducers</a></dd>
-    <dt><b>Fri 02 March 2018</b></dt>
-    <dd><a href="https://complab-stonybrook.github.io/mlrg/news/2018-spring/thomas-on-tree-transducers.html">Thomas on Tree Transducers</a></dd>
 </dl>
 		  </div>	
 		  
